<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dans.apps.baratonchurch.ReadActivity">
    <item
        android:id="@+id/jump_to_day_read"
        android:orderInCategory="1"
        android:icon="@drawable/calender"
        android:title="@string/jump_to_day"
        app:showAsAction="always"/>
    <item
        android:id="@+id/add_to_favourites"
        android:orderInCategory="2"
        android:icon="@drawable/favorite_white"
        android:title="@string/add_to_favourites"
        app:showAsAction="always"/>
    <item
        android:id="@+id/refresh_daly_read"
        android:orderInCategory="3"
        android:icon="@drawable/refresh"
        android:title="@string/refresh"
        app:showAsAction="always"/>
</menu>
