<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    app:cardElevation="4dp"
    android:layout_margin="2dp"
    android:foreground="?android:selectableItemBackground"
    app:contentPadding="10dp"
    app:cardUseCompatPadding="true"
    android:layout_height="160dp">
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <ImageView
           android:id="@+id/favourites_lesson_cover"
           android:layout_width="@dimen/cover_width"
           android:layout_height="@dimen/cover_height"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true"
           android:background="@color/grey200" />
       <TextView
           android:id="@+id/favourite_reading_lesson_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true"
           android:layout_marginTop="14dp"
           android:layout_marginLeft="14dp"
           android:maxLines="2"
           android:layout_toEndOf="@+id/favourites_lesson_cover"
           android:layout_toRightOf="@+id/favourites_lesson_cover"
           tools:text="@string/date_dummy_data" />

       <TextView
           android:id="@+id/favourite_reading_title"
           android:layout_width="wrap_content"
           android:textSize="17sp"
           android:layout_marginTop="2dp"
           android:layout_height="wrap_content"
           android:layout_centerVertical="true"
           android:layout_toEndOf="@+id/favourites_lesson_cover"
           android:layout_toRightOf="@+id/favourites_lesson_cover"
           android:maxLines="4"
           android:layout_below="@+id/favourite_reading_lesson_title"
           android:layout_marginLeft="14dp"
           android:ellipsize="end"
           tools:text="@string/title_dummy_data" />

       <Button
           android:id="@+id/remove_from_favourites"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/favourite_reading_title"
           android:layout_alignParentEnd="true"
           android:layout_alignParentBottom="true"
           android:background="?selectableItemBackground"
           android:textColor="@color/yellow"
           android:text="@string/remove"
           android:layout_alignParentRight="true" />

   </RelativeLayout>
</android.support.v7.widget.CardView>